explore oc and home page

--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -202,6 +202,183 @@
         </div>
       </div>
     </div>
+
+    <div class="the-game">
+      <div class="db-container">
+        <div class="db-row">
+          <div class="db-col">
+            <div class="db-inner-row">
+              <div class="db-inner-col">
+                <img src="{{ 'Explore-OC__asset-v03-194x166.png' | asset_url }}" alt="">
+              </div>
+
+              <div class="db-inner-col">
+                <svg xmlns="http://www.w3.org/2000/svg" width="332" height="221" viewBox="0 0 332 221" fill="none" class="db-svg">
+                  <path d="M11.0301 73.3945V12.0512H0V0H38.2437V12.0512H27.304V73.3945H11.0301Z" fill="#EFC5FC"/>
+                  <path d="M41.3459 73.3945V0H57.5294V29.7202H68.8308V0H85.1047V73.3945H68.8308V41.3184H57.5294V73.3945H41.3459Z" fill="#EFC5FC"/>
+                  <path d="M92.6405 73.3945V0H125.55V11.0545H108.824V29.2672H121.572V40.5029H108.824V62.4306H125.731V73.3945H92.6405Z" fill="#EFC5FC"/>
+                  <path d="M41.1171 221C32.415 221 25.5259 219.183 20.4498 215.549C15.4772 211.915 11.9031 206.828 9.72762 200.287C7.65571 193.642 6.61976 186.011 6.61976 177.394V135.033C6.61976 126.104 7.75931 118.37 10.0384 111.829C12.3175 105.288 16.2023 100.252 21.6929 96.7221C27.2871 93.0883 34.8495 91.2713 44.3803 91.2713C53.7039 91.2713 61.0074 92.8287 66.2908 95.9434C71.6777 99.0582 75.5108 103.367 77.7899 108.87C80.069 114.372 81.2085 120.809 81.2085 128.181V136.279H54.0147V126.001C54.0147 123.301 53.8075 120.809 53.3931 118.525C53.0824 116.241 52.2536 114.424 50.9069 113.074C49.6637 111.621 47.5918 110.894 44.6911 110.894C41.6868 110.894 39.5113 111.725 38.1646 113.386C36.8179 114.943 35.9373 116.916 35.5229 119.304C35.2121 121.692 35.0567 124.184 35.0567 126.779V185.181C35.0567 187.984 35.3157 190.631 35.8337 193.123C36.4553 195.511 37.4912 197.484 38.9416 199.041C40.4955 200.495 42.671 201.221 45.4681 201.221C48.3688 201.221 50.5961 200.443 52.15 198.885C53.7039 197.328 54.7917 195.303 55.4133 192.812C56.0348 190.32 56.3456 187.672 56.3456 184.869V170.074H45.0019V153.722H81.3639V219.131H63.0275L61.4736 208.697C59.8161 212.227 57.3816 215.186 54.1701 217.574C50.9586 219.858 46.6076 221 41.1171 221Z" fill="#EFC5FC"/>
+                  <path d="M86.4968 219.131L110.272 92.9844H141.972L165.437 219.131H139.797L135.601 192.5H117.109L112.758 219.131H86.4968ZM119.596 175.836H132.959L126.277 126.624L119.596 175.836Z" fill="#EFC5FC"/>
+                  <path d="M171.463 219.131L173.638 92.9844H203.474L217.304 166.336L232.222 92.9844H260.969L263.145 219.131H243.41L241.079 135.189L226.472 219.131H208.913L193.373 134.566L191.509 219.131H171.463Z" fill="#EFC5FC"/>
+                  <path d="M275.126 219.131V92.9844H331.689V111.984H302.941V143.287H324.852V162.599H302.941V200.287H332V219.131H275.126Z" fill="#EFC5FC"/>
+                </svg>
+
+                <div class="db-content">
+                  <div class="db-title">
+                    One Big Musical Glory
+                  </div>
+
+                  <div class="db-description">
+                    Something Big is Coming to World of Deadbeat Music!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="db-col">
+            <div class="db-inner-row">
+              <div class="db-inner-col">
+                Ok deep breath. We can do this.
+              </div>
+
+              <div class="db-inner-col">
+                Deadbeat is one big community game of musical glory. Join a music borough (psst) if you know how to spell Burrr-oh slip us a note) create your character, then you and your mates quest AT to dominate the OC with your borough.
+              </div>
+
+              <div class="db-inner-col">
+                <ul class="db-options">
+                  <li class="db-items">
+                    <div class="db-wrap">
+                      <div class="db-option">
+                        COMPETE
+                      </div>
+
+                      <div class="db-description">
+                        Compete to put your borough on top
+                      </div>
+                    </div>
+                  </li>
+
+                  <li class="db-items">
+                    <div class="db-wrap">
+                      <div class="db-option">
+                        CHARACTER CREATION
+                      </div>
+
+                      <div class="db-description">
+                        Create and tell  your character’s story
+                      </div>
+                    </div>
+                  </li>
+
+                  <li class="db-items">
+                    <div class="db-wrap">
+                      <div class="db-option">
+                        BREAKTHROUGH
+                      </div>
+
+                      <div class="db-description">
+                        Break new artists
+                      </div>
+                    </div>
+                  </li>
+
+                  <li class="db-items">
+                    <div class="db-wrap">
+                      <div class="db-option">
+                        COMMUNITY
+                      </div>
+
+                      <div class="db-description">
+                        Connect with bigger artists
+                      </div>
+                    </div>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="db-section db-section--explore-oc-after-life-roadmap">
+    <div class="afterlife">
+      <div class="db-container">
+        <div class="db-row">
+          <div class="db-col">
+            THE AFTER, AFTER LIFE
+          </div>
+          <div class="db-col">
+            But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the world of the undead in 2069.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="roadmap">
+      <div class="roadmap-bg-video-container">
+        <video class="db-bg-video --ds-view"
+          src="https://cdn.shopify.com/videos/c/o/v/77af5f37ef2a4afd9104d2a6f08e811c.mp4"
+          allow="autoplay"
+          preload="auto"
+          control="false"
+          autoplay="true"
+          volume="0"
+          playsinline=""
+          muted=""
+          loop="">
+        </video>
+        <video class="db-bg-video --mb-view"
+          src="https://cdn.shopify.com/videos/c/o/v/1c279c7d77d2420a8d2a0bdc8e73805e.mp4"
+          allow="autoplay"
+          preload="auto"
+          control="false"
+          autoplay="true"
+          volume="0"
+          playsinline=""
+          muted=""
+          loop="">
+        </video>
+      </div>
+
+      <div class="db-container">
+        <div class="db-row">
+          <div class="db-col">
+            IT’S A MAP!
+          </div>
+
+          <div class="db-col">
+            Yep, that’s it, there’s where it all goes down. This is the world we’re building together with you.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="db-section db-section--explore-oc-coming-soon-2">
+
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-col">
+          <span>
+            CD92.9
+          </span>
+          <br/>
+          
+          <span>
+            A Really Real Radio Station
+          </span>
+        </div>
+        <div class="db-col">
+          No, really. We’re making a radio station direct from 2069 with our friends at CD92.9. A direct line from the undead world of 2069 into your ear-hole. Dope music, DJ’s, YOU, and sometimes our fav artists show up.
+        </div>
+      </div>
+    </div>
+
   </section>
 
   <section class="db-section db-section--explore-oc-resurrection">
