--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -82,6 +82,7 @@
   </div> {% endcomment %}
 
   <section class="db-section db-section--banner">
+
     <div class="db-bg-wrap">
       <video class="db-bg-video"
         id=""
@@ -91,7 +92,12 @@
         muted
         loop>
       </video>
+
+      <div class="db-socials">
+        {% render 'socials' %}
+      </div>
     </div>
+
     <div class="db-container">
       <div class="db-row">
         <div class="db-col">
@@ -232,6 +238,11 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 62 62" fill="none" class="db-svg">
                               <circle cx="31.4326" cy="31" r="30" stroke="#B1FF29"/>
                               <path d="M41.4326 31C41.4333 31.2612 41.366 31.5181 41.2373 31.7457C41.1087 31.9733 40.9231 32.1639 40.6985 32.299L26.7817 40.7736C26.5471 40.9166 26.2783 40.9947 26.0033 40.9997C25.7282 41.0048 25.4567 40.9367 25.2169 40.8024C24.9794 40.6702 24.7816 40.4775 24.6437 40.2439C24.5059 40.0104 24.433 39.7445 24.4326 39.4736V22.5264C24.433 22.2555 24.5059 21.9896 24.6437 21.7561C24.7816 21.5225 24.9794 21.3298 25.2169 21.1976C25.4567 21.0633 25.7282 20.9952 26.0033 21.0003C26.2783 21.0053 26.5471 21.0834 26.7817 21.2264L40.6985 29.701C40.9231 29.8361 41.1087 30.0267 41.2373 30.2543C41.366 30.4819 41.4333 30.7388 41.4326 31Z" fill="#B1FF29"/>
+                            </svg>
+
+                            <svg xmlns="http://www.w3.org/2000/svg" width="78" height="79" viewBox="0 0 78 79" fill="none" class="db-svg">
+                              <ellipse cx="39.2908" cy="39.0925" rx="37.9808" ry="38.4231" stroke="#B1FF29" stroke-width="1.26355"/>
+                              <path d="M51.9516 39.0925C51.9524 39.427 51.8673 39.756 51.7044 40.0475C51.5416 40.3391 51.3065 40.5832 51.0222 40.7562L33.4032 51.6102C33.1062 51.7933 32.7659 51.8933 32.4177 51.8998C32.0694 51.9063 31.7257 51.8191 31.4222 51.6471C31.1215 51.4778 30.871 51.2309 30.6965 50.9318C30.522 50.6327 30.4297 50.2922 30.4292 49.9453V28.2397C30.4297 27.8928 30.522 27.5523 30.6965 27.2532C30.871 26.9541 31.1215 26.7072 31.4222 26.5379C31.7257 26.3659 32.0694 26.2786 32.4177 26.2851C32.7659 26.2916 33.1062 26.3916 33.4032 26.5748L51.0222 37.4288C51.3065 37.6018 51.5416 37.8459 51.7044 38.1374C51.8673 38.429 51.9524 38.758 51.9516 39.0925Z" fill="#B1FF29"/>
                             </svg>
                           </div>
 
