--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -1777,8 +1777,9 @@
   .db-section--explore-oc-the-game {
     position: relative;
     padding-bottom: 0;
-    background-color: #0E051A;
+    background-color: #0D0713;
     padding-top: 256px;
+    padding-bottom: 130px;
 
     &::before {
       content: "";
@@ -1899,6 +1900,469 @@
               &:nth-child(2) {
 
               }
+            }
+          }
+        }
+      }
+    }
+
+    .the-game {
+      position: relative;
+      z-index: 2;
+      padding-top: 218px;
+      background-color: #0D0713;
+
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: block;
+        background: url('Explore-OC__asset-v04-3454x2030.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        max-width: 1727px;
+        width: 100%;
+        height: 1015px;
+        z-index: -1;   
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        display: block;
+        height: 241px;
+        background: linear-gradient(0deg, rgba(13, 8, 23, 0.00) 0%, rgba(13, 8, 23, 0.46) 17.61%, rgba(12, 8, 22, 0.74) 35.14%, #0C0915 49.79%);
+      }
+      
+      .db-container {
+        max-width: 1393px;
+
+        .db-row {
+          column-gap: 238px;
+          &:nth-child(1) {
+            .db-col {
+              &:nth-child(1) {
+                max-width: 662px;
+                width: 100%;
+                min-width: 662px;
+                border-radius: 10px;
+                border: 15px solid #1A0720;
+                box-shadow: 5px 15px 40px 0px rgba(0, 0, 0, 0.60);
+                padding: 26px 30px 117px 30px;
+                height: 788px;
+                background: url('Explore-OC__asset-v02-1324x1576.png');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                display: flex;
+                justify-content: flex-end;
+
+                .db-inner-row {
+                  max-width: 356px;
+                  width: 100%;
+                  min-width: 356px;
+                  height: 100%;
+                  flex-direction: column;
+
+                  .db-inner-col {
+                    &:nth-child(1) {
+                      max-width: 97px;
+                      width: 100%;
+                      min-width: 97px;
+                      height: 83px;
+                      align-self: flex-end;
+
+                      img {
+                        display: block;
+                        object-fit: cover;
+                        width: 100%;
+                      }
+                    }
+
+                    &:nth-child(2) {
+                      display: flex;
+                      flex-direction: column;
+                      row-gap: 227px;
+
+                      svg {
+                        max-width: 332px;
+                        min-width: 332px;
+                        width: 100%;
+                        height: 221px; 
+                      }
+
+                      .db-content {
+                        .db-title {
+                          color: #FFF;
+                          font-family: $primaryFontFamily;
+                          font-size: 24px;
+                          font-style: normal;
+                          font-weight: 500;
+                          line-height: 150%; /* 36px */
+                          text-transform: uppercase;
+                        }
+
+                        .db-description {
+                          color: #EFEFEF;
+                          font-family: $secondaryFontFamily;
+                          font-size: 20px;
+                          font-style: normal;
+                          font-weight: 400;
+                          line-height: 130%;
+                          margin-top: 8px;
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+
+              &:nth-child(2) {
+                max-width: 493px;
+                min-width: 493px;
+                width: 100%;
+                padding-top: 5px;
+
+                .db-inner-row {
+                  flex-direction: column;
+                  &:nth-child(1) {
+
+                    .db-inner-col {
+                      &:nth-child(1) {
+                        color: #FFF;
+                        font-family: $primaryFontFamily;
+                        max-width: 380px;
+                        width: 100%;
+                        min-width: 380px;
+                        font-size: 56px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: 115%; /* 64.4px */
+                        letter-spacing: -2.24px;
+                        text-transform: uppercase;
+                      }
+
+                      &:nth-child(2) {
+                        color: #FFF;
+                        font-family: $primaryFontFamily;
+                        font-size: 20px;
+                        font-style: normal;
+                        font-weight: 500;
+                        line-height: 150%;
+                        margin-top: 24px;
+                      }
+
+                      &:nth-child(3) {
+                        margin-top: 50px;
+
+                        .db-options {
+                          .db-items {
+                            padding-top: 30px;
+                            padding-bottom: 28px;
+                            padding-left: 43px;
+                            position: relative;
+                            cursor: pointer;
+                            overflow: hidden;
+
+                            &::before {
+                              content: "";
+                              position: absolute;
+                              top: 0;
+                              left:0;
+                              bottom: 0;
+                              right: 0;
+                              z-index: -1;
+                              background: linear-gradient(90deg, rgba(161, 32, 210, 0.40) -19.47%, rgba(162, 82, 193, 0.00) 75%);
+                              transform: translateX(-100%);
+                              transition: all 600ms ease-in-out 0ms;  
+                            }
+
+                            &:hover {
+                              &::before {
+                                transform: translateX(0);
+                              }
+                            }
+
+
+                            .db-wrap {
+                              .db-option {
+                                color: #FFF;
+                                font-family: $primaryFontFamily;
+                                font-size: 28px;
+                                font-style: normal;
+                                font-weight: 500;
+                                line-height: 100%;
+                              }
+
+                              .db-description {
+                                color: #CAC7D0;
+                                font-family: $secondaryFontFamily;
+                                font-size: 18px;
+                                font-style: normal;
+                                font-weight: 400;
+                                line-height: 150%;
+                                margin-top: 9px;
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .db-section--explore-oc-after-life-roadmap {
+    position: relative;
+    height: 2276px;
+    padding-top: 235px;
+    padding-left: unset;
+    padding-right: unset;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      top: 0;
+      right: 0;
+      left: 0;
+      height: 1424px;
+      background: url('Explore-OC__asset-v05-3800x2848.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      z-index: -1;
+    }
+
+    .afterlife {
+      .db-container {
+        .db-row {
+          &:nth-child(1) {
+            flex-direction: column;
+            row-gap: 70px;
+            align-items: center;
+            .db-col {
+              &:nth-child(1) {
+                color: #FFF;
+                text-align: center;
+                font-family: $primaryFontFamily;
+                font-size: 80px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 100%;
+              }
+
+              &:nth-child(2) {
+                max-width: 773px;
+                width: 100%;
+                min-width: 773px;
+                color: #FFF;
+                text-align: center;
+                font-family: $primaryFontFamily;
+                font-size: 32px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 150%;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .roadmap {
+      margin-top: 672px;
+      padding-bottom: 77px;
+      position: relative;
+      height: 1076px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      &::before {
+        content: "";
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 287px;
+        background: linear-gradient(180deg, #0F0918 0%, rgba(15, 9, 23, 0.00) 100%);
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        display: block;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 228px;
+        background: linear-gradient(0deg, #0E0914 0%, rgba(14, 9, 20, 0.00) 100%);
+      }
+
+      .roadmap-bg-video-container {
+        position: absolute;
+        top:0;
+        bottom:0;
+        left: 0;
+        right: 0;
+        z-index: -1;
+        display: block;
+        width: 100%;
+        height: 100%;
+
+        .db-bg-video {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          z-index: 1;
+          display: block;
+          object-position: center;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+
+          &.--ds-view {
+            display: block;
+
+            @media only screen and (max-width: 768px) {
+              display: none;
+            }
+          }
+
+          &.--mb-view {
+            display: none;
+
+            @media only screen and (max-width: 768px) {
+              display: block;
+            }
+          }
+        }
+      }
+
+      .db-container {
+        position: relative;
+        z-index: 2;
+        .db-row {
+          &:nth-child(1) {
+            flex-direction: column;
+            row-gap: 8px;
+            .db-col {
+              &:nth-child(1) {
+                color: #FFF;
+                text-shadow: 1.7687277793884277px 1.7687277793884277px 13.265459060668945px rgba(0, 0, 0, 0.15);
+                font-family: $primaryFontFamily;
+                font-size: 48px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: 100%; /* 48px */
+                letter-spacing: -1.92px;
+              }
+
+              &:nth-child(2) {
+                color: #FFF;
+                text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                font-family: $primaryFontFamily;
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 150%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .db-section--explore-oc-coming-soon-2 {
+    background: #0E0914;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      height: 979px;
+      background-image: url('About-Us__asset-coming-soon-v01-3800x1958.png');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .db-container {
+      padding-top: 194px;
+      padding-bottom: 347px;
+      position: relative;
+
+      .db-row {
+        flex-direction: column;
+        row-gap: 56px;
+        max-width: 685px;
+        width: 100%;
+
+        &:nth-child(1) {
+          .db-col {
+            &:nth-child(1) {
+              // color: #FFF;
+              // font-family: $primaryFontFamily;
+              // font-size: 80px;
+              // font-style: normal;
+              // font-weight: 700;
+              // line-height: 115%; /* 92px */
+              // letter-spacing: -3.2px;
+              // max-width: 477px;
+              // width: 100%;
+
+              span {
+                &:nth-child(1) {
+                  color: #A120D2;
+                  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                  font-family: $primaryFontFamily;
+                  font-size: 80px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 100%; /* 80px */
+                  letter-spacing: -3.2px;
+                }
+
+                &:nth-child(3) {
+                  color: #FFF;
+                  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                  font-family: $primaryFontFamily;
+                  font-size: 48px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 100%;
+                }
+              }
+            }
+
+            &:nth-child(2) {
+              color: #FFF;
+              font-family: $primaryFontFamily;
+              font-size: 32px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 150%;
+              max-width: 685px;
+              width: 100%;
             }
           }
         }
