--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -98,6 +98,19 @@
       </div>
     </div>
 
+    <figure v-if="isActiveVideo">
+      <video controls preload="metadata" poster="{{ 'Explore-OC__asset-v01-2880x1620.png' | asset_url }}">
+        <source src="https://cdn.shopify.com/videos/c/o/v/b36362a736b3419b8bbac258ac7aad7e.mp4" type="video/mp4" />
+      </video>
+
+      <svg xmlns="http://www.w3.org/2000/svg" width="382" height="382" viewBox="0 0 382 382" fill="none" class="db-svg" @click="toggleVideo">
+                  <path d="M375.784 6.21585C384.072 14.5036 384.072 27.9408 375.784 36.2286L284.679 127.333H318.333C330.054 127.333 339.556 136.835 339.556 148.556C339.556 160.276 330.054 169.778 318.333 169.778H233.444C221.724 169.778 212.222 160.276 212.222 148.556V63.6667C212.222 51.946 221.724 42.4444 233.444 42.4444C245.165 42.4444 254.667 51.946 254.667 63.6667V97.3206L345.771 6.21585C354.059 -2.07195 367.496 -2.07195 375.784 6.21585Z" fill="white"/>
+                  <path d="M42.4444 233.444C42.4444 221.724 51.946 212.222 63.6667 212.222H148.556C160.276 212.222 169.778 221.724 169.778 233.444V318.333C169.778 330.054 160.276 339.556 148.556 339.556C136.835 339.556 127.333 330.054 127.333 318.333V284.679L36.2286 375.784C27.9408 384.072 14.5036 384.072 6.21585 375.784C-2.07195 367.496 -2.07195 354.059 6.21585 345.771L97.3206 254.667H63.6667C51.946 254.667 42.4444 245.165 42.4444 233.444Z" fill="white"/>
+                  <path d="M42.4444 148.556C42.4444 160.276 51.946 169.778 63.6667 169.778H148.556C160.276 169.778 169.778 160.276 169.778 148.556V63.6667C169.778 51.946 160.276 42.4445 148.556 42.4445C136.835 42.4445 127.333 51.946 127.333 63.6667V97.3206L36.2286 6.21584C27.9408 -2.07194 14.5036 -2.07194 6.21585 6.21584C-2.07195 14.5037 -2.07195 27.9408 6.21585 36.2286L97.3206 127.333H63.6667C51.946 127.333 42.4444 136.835 42.4444 148.556Z" fill="white"/>
+                  <path d="M375.784 375.784C384.072 367.496 384.072 354.059 375.784 345.771L284.679 254.667H318.333C330.054 254.667 339.556 245.165 339.556 233.444C339.556 221.724 330.054 212.222 318.333 212.222H233.444C221.724 212.222 212.222 221.724 212.222 233.444V318.333C212.222 330.054 221.724 339.556 233.444 339.556C245.165 339.556 254.667 330.054 254.667 318.333V284.679L345.771 375.784C354.059 384.072 367.496 384.072 375.784 375.784Z" fill="white"/>
+        </svg>
+    </figure>
+
     <div class="db-container">
       <div class="db-row">
         <div class="db-col">
@@ -232,7 +245,7 @@
                       </div>
 
                       <div class="db-widget-inner-col">
-                        <div class="db-widget-project-trailer">
+                        <div class="db-widget-project-trailer" @click="toggleVideo">
                           
                           <div class="db-play">
                             <svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 62 62" fill="none" class="db-svg">
@@ -351,6 +364,7 @@
         is_paused: true,
         is_active: false,
         track: null,
+        isActiveVideo:false,
         playlist: [],
       }
     },
@@ -419,6 +433,9 @@
       }
     },
     methods: {
+      toggleVideo() {
+        this.isActiveVideo = !this.isActiveVideo;
+      },
       connectToSpotifyWebSDK() {
         window.onSpotifyWebPlaybackSDKReady = () => {
             const player = new window.Spotify.Player({
