--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -12,6 +12,8 @@
     align-items: center;
     justify-content: center;
 
+
+
     // .spotify-wrapper {
     //   // a {
     //   //   text-decoration: none;
@@ -504,6 +506,36 @@
         width: 100%;
         height: 100%;
         margin: 0 auto;
+      }
+    }
+
+    figure {
+      position: fixed;
+      top:0;
+      right: 0;
+      bottom:0;
+      display: block;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 99;
+
+      video {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-position: center;
+        object-fit: cover;
+      }
+
+      svg {
+        position: absolute;
+        right: 50px;
+        top: 150px;
+        z-index: 10;
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
       }
     }
 
