--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -52,7 +52,7 @@
                   It’s a wild story wrapped around a giant community game. You create your characters, discover new music, go to parties IRL, listen to our radio station, maybe even contribute to it.
                   <br/>
                   <br/>
-                  This world your world, this world is out world, from the OC waters to the OC islands. This world was made for you and us.
+                  This world is your world, this world is our world, from the OC waters to the OC islands. This world was made for you and us.
                 </div>
 
                 <div class="yaas-inner-col">
