--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -287,7 +287,7 @@
                   </div>
 
                   <div class="db-description">
-                    Something Big is Coming to World of Deadbeat Music!
+                    Do you have what it takes to become a permanent resident of the OC ?
                   </div>
                 </div>
               </div>
@@ -301,7 +301,7 @@
               </div>
 
               <div class="db-inner-col">
-                Deadbeat is one big community game of musical glory. Join a music borough (psst) if you know how to spell Burrr-oh slip us a note) create your character, then you and your mates quest AT to dominate the OC with your borough.
+                Deadbeat is one big community game of musical glory. Join a music borough (psst if you know how to spell Burrr-oh slip us a note) create your character, then you and your mates do the damn thang to dominate the OC.
               </div>
 
               <div class="db-inner-col">
@@ -313,7 +313,7 @@
                       </div>
 
                       <div class="db-description">
-                        Compete to put your borough on top
+                        Compete to put your borough on top.
                       </div>
                     </div>
                   </li>
@@ -325,7 +325,7 @@
                       </div>
 
                       <div class="db-description">
-                        Create and tell  your character’s story
+                        Create and tell  your character’s story.
                       </div>
                     </div>
                   </li>
@@ -337,7 +337,7 @@
                       </div>
 
                       <div class="db-description">
-                        Break new artists
+                        Discover and break new artists.
                       </div>
                     </div>
                   </li>
@@ -349,7 +349,7 @@
                       </div>
 
                       <div class="db-description">
-                        Connect with bigger artists
+                        Connect with bigger artists and fellow deadbeats.
                       </div>
                     </div>
                   </li>
@@ -371,7 +371,7 @@
             THE AFTER, AFTER LIFE
           </div>
           <div class="db-col">
-            But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the world of the undead in 2069.
+            But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the undead world of 2069.
           </div>
         </div>
       </div>
@@ -406,7 +406,7 @@
       <div class="db-container">
         <div class="db-row">
           <div class="db-col">
-            IT’S A MAP!
+            IT’S A ROADMAP
           </div>
 
           <div class="db-col">
@@ -422,9 +422,9 @@
     <div class="db-container">
       <div class="db-row">
         <div class="db-col">
-          <span>
+          <a href="https://cd929fm.com" class="radio-link">
             CD92.9
-          </span>
+          </a>
           <br/>
           
           <span>
@@ -432,7 +432,7 @@
           </span>
         </div>
         <div class="db-col">
-          Our antenna is currently stolen. As soon as we get it back from the Party Bringers we’ll be back on the air! Stay tuned, Deadbeats...
+          No, really. We're making a radio station with our friends at CD92.9. A direct line from the undead world of 2069 into your ear-hole. Dope music, DJ’s, YOU, and sometimes our fav artists show up.
         </div>
       </div>
     </div>
@@ -457,13 +457,6 @@
           <div class="meet-the-business-of-oc">
             Meet The Businesses of the OC
           </div>
-        </div>
-
-        <div class="db-col">
-          The streets of Old Columbus are no longer ruled by a government, rather 7 powerful gangs fight for control of the city. Pick the faction of your choice and begin your journey to rise through the ranks and become known as the most powerful faction in Old Columbus.
-            <br />
-            <br />
-          They are waiting on you to help lead them to victory.
         </div>
       </div>
 
@@ -614,7 +607,6 @@
       </div>
     </div>
   </section> {% endcomment %}
-  {% comment %} 0A070E {% endcomment %}
   {% comment %} <section class="db-section db-section--explore-oc-coming-soon">
 
     <div class="db-container">
