--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -120,7 +120,7 @@
             <span>Deadbeat</span>
           </h1>
           <p>
-            In 2069 humanity has been replaced by 7 wildly fun music genre loving burroughs of the undead, competing in one big game of musical glory!
+            In 2069 humanity has been replaced by 7 wildly fun, music genre loving boroughs of the undead, competing in one big game of musical glory!
             <br />
             <br />
             But not quite... yet. Fun takes some work, dammit. So browse a bit, sign up for updates, tell a friend, tell your dog, tell the world.
@@ -245,7 +245,7 @@
                       </div>
 
                       <div class="db-widget-inner-col">
-                        <div class="db-widget-project-trailer" @click="toggleVideo">
+                        <a class="db-widget-project-trailer" @click="toggleVideo" href="https://deadbeat2069.myshopify.com/pages/explore-oc">
                           
                           <div class="db-play">
                             <svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 62 62" fill="none" class="db-svg">
@@ -268,7 +268,7 @@
                             </span>
                           </div>
 
-                        </div>
+                        </a>
                       </div>
                     </div>
                   </div>
