--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -2940,8 +2940,7 @@
                 align-items: center;
               }
 
-              span {
-                &:nth-child(1) {
+              .radio-link {
                   color: #A120D2;
                   text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
                   font-family: $primaryFontFamily;
@@ -2964,7 +2963,8 @@
                     line-height: 115%; /* 36.501px */
                     letter-spacing: -1.27px;
                   }
-                }
+              }
+              span {
 
                 &:nth-child(3) {
                   color: #FFF;
