--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -264,7 +264,7 @@
                               PROJECT
                             </span>
                             <span>
-                              TRAILER
+                              TEASER
                             </span>
                           </div>
 
